used AppPreloader to set the app name in the OS (otherwise all the package is shown)